--- a/report/main.tex
+++ b/report/main.tex
@@ -307,7 +307,7 @@ However, there could be weaker relaxations that would preserve the generalizatio
 We can now formulate the kind of trade-off induced by convex neural networks. They transform the non-convex problem of optimizing a neural network into the convex problem of optimizing a convex neural network, yet in infinite dimension. With a proper constraint on the variation norm, convex neural networks are adaptive to structure. But the subproblem of adding a new hidden layer in the conditional gradient algorithm is computationally intractable. One might also consider other optimization methods.
 
 
-\subsection{An Approach using Particle Gradient Flow}
+\subsection{An approach using particle gradient flow}
 
 \cite{chizat2018global} propose a method to solve a more general problem in the space of measures that covers our problem. In this case we use a penalization instead of a constraint.
 
